Переклав до LewaLauncherX

--- a/Ukrainian/main/KeyChain.apk/res/values-uk/strings.xml
+++ b/Ukrainian/main/KeyChain.apk/res/values-uk/strings.xml
@@ -1,12 +1,11 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Основная цепочка</string>
-    <string name="title_no_certs">Сертификаты не найдены</string>
-    <string name="title_select_cert">Выберите сертификат</string>
-    <string name="requesting_application">Приложение %s запросило сертификат. После выбора сертификата приложение сможет использовать идентичность с серверами в текущий момент и в будущем.</string>
-    <string name="requesting_server">Это приложение идентифицировало запрашивающий сервер как %s, но приложению следует открыть доступ к данному сертификату только в том случае, если приложение является доверенным.</string>
-    <string name="install_new_cert_message">Сертификаты можно установить из файла PKCS#12 с расширением %1$s или %2$s, находящемся на внешнем носителе.</string>
-    <string name="install_new_cert_button_label">Установить</string>
-    <string name="allow_button">Разрешить</string>
-    <string name="deny_button">Отклонить</string>
+    <string name="app_name">"Основний ланцюжок"</string>
+    <string name="title_no_certs">"Сертифікати не знайдені"</string>
+    <string name="title_select_cert">"Виберіть сертифікат"</string>
+    <string name="requesting_application">"Додаток %s запросив сертифікат. Після вибору сертифіката додаток зможе використовувати ідентичність з серверами в поточний момент і в майбутньому."</string>
+    <string name="requesting_server">"Ця програма ідентифікувала запитуваний сервер як %s , але з додатком слід відкрити доступ до даного сертифікату тільки в тому випадку, якщо додаток є довіреною."</string>
+    <string name="install_new_cert_message">"Сертифікати можна встановити з файлу PKCS#12 з розширенням %1$s або %2$s, що знаходиться на зовнішньому носії."</string>
+    <string name="install_new_cert_button_label">"Встановити"</string>
+    <string name="allow_button">"Дозволити"</string>
+    <string name="deny_button">"Відхилити"</string>
 </resources>
