--- a/Ukrainian/main/HoloSpiralWallpaper.apk/res/values-uk/strings.xml
+++ b/Ukrainian/main/HoloSpiralWallpaper.apk/res/values-uk/strings.xml
@@ -1,6 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="wallpaper_label">Гологр.спирали</string>
-    <string name="wallpaper_author">Google</string>
-    <string name="wallpaper_description">Обои с голографическими спиралями</string>
+    <string name="wallpaper_label">"Гологр.спіралі"</string>
+    <string name="wallpaper_author">"Google"</string>
+    <string name="wallpaper_description">"Шпалери з голографічними спіралями"</string>
 </resources>
