--- a/Ukrainian/main/LabiSync.apk/res/values-uk/strings.xml
+++ b/Ukrainian/main/LabiSync.apk/res/values-uk/strings.xml
@@ -1,18 +1,17 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Синхронизация контактов</string>
-    <string name="sync_success">Синхронизация закончена!</string>
-    <string name="sync_fail">Ошибка синхронизации, повторите снова!</string>
-    <string name="sync_title">Синхронизация контактов</string>
-    <string name="syncing">Синхронизация, пожалуйста подождите...</string>
-    <string name="sync_format">Синхронизированно %1$s контакт (всего %2$s контактов)</string>
-    <string name="sync_warning_info">Синхронизация ваших контактов. Продолжить?</string>
-    <string name="recovery_success">Восстановление удачно!</string>
-    <string name="recovery_fail">Ошибка восстановления, повторите снова!</string>
-    <string name="recovering">Восстановление,пожалуйста подождите...</string>
-    <string name="recover_title">Восстановление контактов</string>
-    <string name="recover_format">Восстановлено %1$s контактов (всего %2$s контактов)</string>
-    <string name="recover_warning_info">Вооствновление контактов поверх существующих. Продолжить?</string>
-    <string name="no_network">Нет сети, пожалуйста, повторите позже.</string>
-    <string name="no_contacts_oncloud">Нет контактов.</string>
+    <string name="app_name">"Синхронізація контактів"</string>
+    <string name="sync_success">"Синхронізація закінчена!"</string>
+    <string name="sync_fail">"Помилка синхронізації, повторіть знову!"</string>
+    <string name="sync_title">"Синхронізація контактів"</string>
+    <string name="syncing">"Синхронізація, будь ласка зачекайте..."</string>
+    <string name="sync_format">"Синхронізовано %1$s контакт (всього %2$s контактів)"</string>
+    <string name="sync_warning_info">"Синхронізація ваших контактів. Продовжити?"</string>
+    <string name="recovery_success">"Відновлення вдало!"</string>
+    <string name="recovery_fail">"Помилка відновлення, повторіть знову!"</string>
+    <string name="recovering">"Відновлення, будь ласка зачекайте ..."</string>
+    <string name="recover_title">"Відновлення контактів"</string>
+    <string name="recover_format">"Відновлено %1$s контактів (всього %2$s контактів)"</string>
+    <string name="recover_warning_info">"Відновлення контактів поверх існуючих. Продовжити?"</string>
+    <string name="no_network">"Немає мережі, будь ласка, повторіть пізніше."</string>
+    <string name="no_contacts_oncloud">"Немає контактів."</string>
 </resources>
