--- a/Ukrainian/main/LewaAppStore.apk/res/values-uk/strings.xml
+++ b/Ukrainian/main/LewaAppStore.apk/res/values-uk/strings.xml
@@ -1,88 +1,87 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_store">Lewa Маркет</string>
-    <string name="app_update">Обновление прилож.</string>
-    <string name="app_download">раз</string>
-    <string name="app_size">Размер: </string>
-    <string name="app_source">Источник: </string>
-    <string name="image_content">изображение</string>
-    <string name="app_version">Версия: </string>
-    <string name="app_old_tip">Текущая версия: </string>
-    <string name="app_new_tip">Новая версия: </string>
-    <string name="app_size_tip">Размер: </string>
-    <string name="load_tip">Загрузка…</string>
-    <string name="topic_review">Обзор</string>
-    <string name="share_title">Поделиться с друзьями</string>
-    <string name="share_content">Я нашел забавное приложение в Lewa Маркете\"%1$s\", присоединяйся~%2$s</string>
-    <string name="clear_search_history">Очистить историю</string>
-    <string name="message_loading_app_to_share">Загрузка, Вы можете поделиться позже~</string>
-    <string name="message_get_app_fail_to_share">Получение приложения не удалось, невозможно поделиться~</string>
-    <string name="message_net_work_disconnect">Ошибка сети-_-!</string>
-    <string name="message_download_error_url_error">Адрес загрузки не существует-_-!</string>
-    <string name="message_download_error">Ошбика загрузки-_-!</string>
-    <string name="message_install_error">Установка не удалась-_-!</string>
-    <string name="message_no_more">Больше нет~</string>
-    <string name="message_response_fail">Получение данных не удалось-_-!</string>
-    <string name="message_response_error">Ошибка отклика-_-!</string>
-    <string name="message_sd_not_available">SD-карта недоступна-_-!</string>
-    <string name="message_sd_available">SD-карта доступна. Теперь Вы можете скачивать приложение~</string>
-    <string name="message_sd_not_available_for_image">SD-карта недоступна, Невозможно загрузить приложение, Не получается отобразить картинки приложения-_-!</string>
-    <string name="message_sd_not_enough">Свободного места на SD-карте недостаточно. Пожалуйста, освободите место на ней-_-!</string>
-    <string name="message_big_apk_tip">Размер больше 5 МБ, рекомендуется загрузка по Wi-Fi~</string>
-    <string name="message_no_search_result">Нет результата-_-!</string>
-    <string name="message_no_search_word">Попробуйте ввести ключевые слова для поиска~</string>
-    <string name="message_open_app_fail">Не удалось открыть приложение-_-!</string>
-    <string name="noti_install_app_fail">Установка не удалась, вначале рекомендуется удалить его</string>
-    <string name="noti_install_app_fail_invalid_apk">Установка не удалась, не получается проанализировать apk</string>
-    <string name="noti_install_app_fail_insufficient_storage">Установка не удалась, свободного места на SD-карте недостаточно</string>
-    <string name="noti_install_app_fail_no_file">Установка не удалась, отсутствует apk</string>
-    <string name="noti_install_app_fail_app_is_top">Not Install, app is on the top, click to v</string>
-    <string name="noti_install_app_installing">Установка</string>
-    <string name="noti_install_app_begin">Начало установки</string>
-    <string name="noti_title_install_app_success">Установка прошла успешно</string>
-    <string name="noti_install_app_success">Установка прошла успешно, нажмите для запуска</string>
-    <string name="update_no_more">Версия Вашего приложения самая последняя~</string>
-    <string name="noti_noti_update_suffix">Lewa Маркет может обновить %1$s приложений</string>
-    <string name="noti_noti_update_suffix2">Возможно обновление</string>
-    <string name="source_official">Lewa</string>
-    <string name="app_praise">Нравится %1$s</string>
-    <string name="app_praise_topic">%1$s лайков</string>
-    <string name="app_status_download">Загрузить</string>
-    <string name="app_status_pending">Ожидание</string>
-    <string name="app_status_downloading">Загрузка</string>
-    <string name="app_status_open">Открыть</string>
-    <string name="app_status_install">Установить</string>
-    <string name="app_status_installing">Установка</string>
-    <string name="app_status_load_pause">Пауза</string>
-    <string name="app_status_installed">Открыть</string>
-    <string name="app_status_new_version">Обновить</string>
-    <string name="app_status_pause">Пауза</string>
-    <string name="app_status_pausing">На паузе</string>
-    <string name="app_status_resume">Возобновить</string>
-    <string name="app_status_cancel">Отмена</string>
-    <string name="number_yi">G+</string>
-    <string name="number_wan">M+</string>
-    <string name="number_qian">K+</string>
-    <string name="network_text">Подключение к сети не удалось</string>
-    <string name="network_setting">Настройки сети</string>
-    <string name="network_refresh">Обновить</string>
-    <string name="app_type_other">Прочее</string>
-    <string name="search_hot">Свежие</string>
-    <string name="message_pause_error">Ошибка паузы-_-!</string>
-    <string name="message_resume_error">Ошибка возобновления-_-!</string>
-    <string name="app_release_time">Дата выпуска: </string>
-    <string name="app_category">Категория: </string>
-    <string name="update_all">Обновить все</string>
-    <string name="menu_setting">Настройки</string>
-    <string name="setting_delete_apk">Удалить apk после успешной установки</string>
-    <string name="setting_update_notification">Уведомлять об обновлении приложений</string>
-    <string name="setting_auto_update">Автообновление приложений</string>
-    <string name="setting_auto_update_summary">Автообновление когда включен WiFi</string>
-    <string name="drop_down_list_header_default_text">Нажмите для обновления…</string>
-    <string name="drop_down_list_header_pull_text">Протяните для обновления…</string>
-    <string name="drop_down_list_header_release_text">Отпустите для обновления…</string>
-    <string name="drop_down_list_header_loading_text">Загрузка…</string>
-    <string name="drop_down_list_footer_default_text">Еще</string>
-    <string name="drop_down_list_footer_loading_text">Загрузка…</string>
-    <string name="drop_down_list_footer_no_more_text">Больше нет</string>
+    <string name="app_store">"Lewa Маркет"</string>
+    <string name="app_update">"Оновлення прогр."</string>
+    <string name="app_download">"раз"</string>
+    <string name="app_size">"Розмір: "</string>
+    <string name="app_source">"Джерело: "</string>
+    <string name="image_content">"зображення"</string>
+    <string name="app_version">"Версія: "</string>
+    <string name="app_old_tip">"Поточна версія: "</string>
+    <string name="app_new_tip">"Нова версія: "</string>
+    <string name="app_size_tip">"Розмір: "</string>
+    <string name="load_tip">"Завантаження..."</string>
+    <string name="topic_review">"Огляд"</string>
+    <string name="share_title">"Поділитися з друзями"</string>
+    <string name="share_content">"Я знайшов забавне додаток в Lewa Маркеті \"%1$s\", приєднуйся~%2$s"</string>
+    <string name="clear_search_history">"Очистити історію"</string>
+    <string name="message_loading_app_to_share">"Завантаження, Ви можете поділитися пізніше~"</string>
+    <string name="message_get_app_fail_to_share">"Отримання додатки не вдалося, неможливо поділитися~"</string>
+    <string name="message_net_work_disconnect">"Помилка мережі-_-!"</string>
+    <string name="message_download_error_url_error">"Адреса завантаження не існує-_-!"</string>
+    <string name="message_download_error">"Помилка завантаження-_-!"</string>
+    <string name="message_install_error">"Встановлення не вдалася-_-!"</string>
+    <string name="message_no_more">"Більше немає~"</string>
+    <string name="message_response_fail">"Отримання даних не вдалося-_-!"</string>
+    <string name="message_response_error">"Помилка відгуку-_-!"</string>
+    <string name="message_sd_not_available">"SD-карта недоступна-_-!"</string>
+    <string name="message_sd_available">"SD-карта доступна. Тепер Ви можете завантажувати додаток ~"</string>
+    <string name="message_sd_not_available_for_image">"SD-карта недоступна, Неможливо завантажити додаток, Не виходить відобразити картинки додатки-_-!"</string>
+    <string name="message_sd_not_enough">"Вільного місця на SD-карті недостатньо. Будь ласка, звільніть місце на ній-_-!"</string>
+    <string name="message_big_apk_tip">"Розмір більше 5 МБ, рекомендується завантаження по Wi-Fi~"</string>
+    <string name="message_no_search_result">"Немає результату-_-!"</string>
+    <string name="message_no_search_word">"Спробуйте ввести ключові слова для пошуку~"</string>
+    <string name="message_open_app_fail">"Не вдалося відкрити програму-_-!"</string>
+    <string name="noti_install_app_fail">"Установка не вдалася, спочатку рекомендується видалити його"</string>
+    <string name="noti_install_app_fail_invalid_apk">"Установка не вдалася, не виходить проаналізувати apk"</string>
+    <string name="noti_install_app_fail_insufficient_storage">"Установка не вдалася, вільного місця на SD-карті недостатньо"</string>
+    <string name="noti_install_app_fail_no_file">"Установка не вдалася, відсутний apk"</string>
+    <string name="noti_install_app_fail_app_is_top">"Not Install, app is on the top, click to v"</string>
+    <string name="noti_install_app_installing">"Установка"</string>
+    <string name="noti_install_app_begin">"Початок встановлення"</string>
+    <string name="noti_title_install_app_success">"Установка пройшла успішно"</string>
+    <string name="noti_install_app_success">"Установка пройшла успішно, натисніть для запуску"</string>
+    <string name="update_no_more">"Версія Вашого застосування сама остання~"</string>
+    <string name="noti_noti_update_suffix">"Lewa Маркет може оновити %1$s додатків"</string>
+    <string name="noti_noti_update_suffix2">"Можливе оновлення"</string>
+    <string name="source_official">"Lewa"</string>
+    <string name="app_praise">"Подобається %1$s"</string>
+    <string name="app_praise_topic">"%1$s лайків"</string>
+    <string name="app_status_download">"Завантажити"</string>
+    <string name="app_status_pending">"Очікування"</string>
+    <string name="app_status_downloading">"Завантаження..."</string>
+    <string name="app_status_open">"Відкрити"</string>
+    <string name="app_status_install">"Встановити"</string>
+    <string name="app_status_installing">"Встановлення"</string>
+    <string name="app_status_load_pause">"Пауза"</string>
+    <string name="app_status_installed">"Відкрити"</string>
+    <string name="app_status_new_version">"Оновити"</string>
+    <string name="app_status_pause">"Пауза"</string>
+    <string name="app_status_pausing">"На паузі"</string>
+    <string name="app_status_resume">"Відновити"</string>
+    <string name="app_status_cancel">"Скасувати"</string>
+    <string name="number_yi">"G+"</string>
+    <string name="number_wan">"M+"</string>
+    <string name="number_qian">"K+"</string>
+    <string name="network_text">"Підключення до мережі не вдалося"</string>
+    <string name="network_setting">"Налаштування мережі"</string>
+    <string name="network_refresh">"Оновити"</string>
+    <string name="app_type_other">"Інше"</string>
+    <string name="search_hot">"Свіжі"</string>
+    <string name="message_pause_error">"Помилка паузи-_-!"</string>
+    <string name="message_resume_error">"Помилка відновлення-_-!"</string>
+    <string name="app_release_time">"Дата випуску: "</string>
+    <string name="app_category">"Категорія: "</string>
+    <string name="update_all">"Оновити все"</string>
+    <string name="menu_setting">"Налаштування"</string>
+    <string name="setting_delete_apk">"Видалити apk після успішної установки"</string>
+    <string name="setting_update_notification">"Повідомляти про оновлення додатків"</string>
+    <string name="setting_auto_update">"Автооновлення додатків"</string>
+    <string name="setting_auto_update_summary">"Автооновлення коли включений WiFi"</string>
+    <string name="drop_down_list_header_default_text">"Натисніть для поновлення..."</string>
+    <string name="drop_down_list_header_pull_text">"Простягніть для поновлення..."</string>
+    <string name="drop_down_list_header_release_text">"Відпустіть для поновлення..."</string>
+    <string name="drop_down_list_header_loading_text">"Завантаження..."</string>
+    <string name="drop_down_list_footer_default_text">"Ще"</string>
+    <string name="drop_down_list_footer_loading_text">"Завантаження..."</string>
+    <string name="drop_down_list_footer_no_more_text">"Більше немає"</string>
 </resources>
