--- a/Ukrainian/main/LewaCalculator.apk/res/values-uk/strings.xml
+++ b/Ukrainian/main/LewaCalculator.apk/res/values-uk/strings.xml
@@ -1,12 +1,11 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Калькулятор</string>
-    <string name="error">Ошибка</string>
-    <string name="basic">Основная панель</string>
-    <string name="advanced">Расширенная панель</string>
-    <string name="clear_history">Очистить историю</string>
-    <string name="text_copied_toast">Текст скопирован</string>
-    <string name="goback">Назад</string>
-    <string name="advance">Расширенный</string>
-    <string name="history">История</string>
+    <string name="app_name">"Калькулятор"</string>
+    <string name="error">"Помилка"</string>
+    <string name="basic">"Основна панель"</string>
+    <string name="advanced">"Розширена панель"</string>
+    <string name="clear_history">"Очистити історію"</string>
+    <string name="text_copied_toast">"Текст скопійований"</string>
+    <string name="goback">"Назад"</string>
+    <string name="advance">"Розширений"</string>
+    <string name="history">"Історія"</string>
 </resources>
