--- a/Ukrainian/main/LewaCleanMemory.apk/res/values-uk/strings.xml
+++ b/Ukrainian/main/LewaCleanMemory.apk/res/values-uk/strings.xml
@@ -1,7 +1,6 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Очистка</string>
-    <string name="menu_settings">Настройки</string>
-    <string name="result_format">Закрыто %1$d приложений, освобождено %2$s памяти.</string>
-    <string name="optimized">Оптимизировано</string>
+    <string name="app_name">"Очищення"</string>
+    <string name="menu_settings">"Налаштування"</string>
+    <string name="result_format">"Закрито %1$d додатків, звільнено %2$s пам'яті."</string>
+    <string name="optimized">"Оптимізовано"</string>
 </resources>
