--- a/Ukrainian/main/LewaCompass.apk/res/values-uk/strings.xml
+++ b/Ukrainian/main/LewaCompass.apk/res/values-uk/strings.xml
@@ -1,12 +1,11 @@
-<?xml version="1.0" encoding="utf-8"?>
 <!--Decoded by jBART (BurgerZ <az.burgerz@gmail.com)>--><resources>
-    <string name="app_name">Компас</string>
-    <string name="north">Север - </string>
-    <string name="northeast">Северо-Восток - </string>
-    <string name="east">Восток - </string>
-    <string name="southeast">Юго-Восток - </string>
-    <string name="south">Юг - </string>
-    <string name="southwest">Юго-Запад - </string>
-    <string name="west">Запад - </string>
-    <string name="northwest">Северо-Запад - </string>
+    <string name="app_name">"Компас"</string>
+    <string name="north">"Північ - "</string>
+    <string name="northeast">"Північний-Схід - "</string>
+    <string name="east">"Схід - "</string>
+    <string name="southeast">"Південний-Схід - "</string>
+    <string name="south">"Південь - "</string>
+    <string name="southwest">"Південний-Захід - "</string>
+    <string name="west">"Захід - "</string>
+    <string name="northwest">"Північний-Захід - "</string>
 </resources>
