--- a/Ukrainian/main/LewaDataUsageAdjust.apk/res/values-uk/strings.xml
+++ b/Ukrainian/main/LewaDataUsageAdjust.apk/res/values-uk/strings.xml
@@ -1,23 +1,22 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Синхр. испол-ния данных</string>
-    <string name="app_summary">Часть Data Meterũ LeWaTek Limited.</string>
-    <string name="app_title">Запрос использования 3G-данных</string>
-    <string name="request_failed">Запрос использования 3G-данных не удался</string>
-    <string name="request_sms">Запрос SMS по отправлению конфига</string>
-    <string name="send_sms">Отправление запроса по использованию 3G-данных через SMS</string>
-    <string name="analyze_sms">Анализирование использования 3G-данных</string>
-    <string name="correct_failed">Синхронизация использования 3G-данных не удалась. Пожалуйста, попробуйте снова.</string>
-    <string name="correct_success">Синхронизация использования 3G-данных прошла успешно</string>
-    <string name="alert_slot_error">Неправильный слот</string>
-    <string name="alert_network_error">Ошибка сети</string>
-    <string name="phone_closed">Телефон не включен. Включите и попробуйте снова.</string>
-    <string name="label_province">Провинция</string>
-    <string name="label_city">Город</string>
-    <string name="label_carrier">Оператор</string>
-    <string name="label_brand">Бренд</string>
-    <string name="label_info">Пожалуйста, подтвердите информацию Вашего оператора</string>
-    <string name="label_data_left">Осталось</string>
-    <string name="label_data_used">Использовано</string>
-    <string name="label_partner">На основе Tencent Mobile Manager</string>
+    <string name="app_name">"Синхрон. використання даних"</string>
+    <string name="app_summary">"Частина Data Meterũ LeWaTek Limited."</string>
+    <string name="app_title">"Запит використання 3G-даних"</string>
+    <string name="request_failed">"Запит використання 3G-даних не вдався"</string>
+    <string name="request_sms">"Запит SMS по відправленню конфігу"</string>
+    <string name="send_sms">"Відправлення запиту по використанню 3G-даних через SMS"</string>
+    <string name="analyze_sms">"Аналізування використання 3G-даних"</string>
+    <string name="correct_failed">"Синхронізація використання 3G-даних не вдалася. Будь ласка, спробуйте знову."</string>
+    <string name="correct_success">"Синхронізація використання 3G-даних пройшла успішно"</string>
+    <string name="alert_slot_error">"Неправильний слот"</string>
+    <string name="alert_network_error">"Помилка мережі"</string>
+    <string name="phone_closed">"Телефон не включено. Увімкніть і спробуйте знову."</string>
+    <string name="label_province">"Провінція"</string>
+    <string name="label_city">"Місто"</string>
+    <string name="label_carrier">"Оператор"</string>
+    <string name="label_brand">"Бренд"</string>
+    <string name="label_info">"Будь ласка, підтвердіть інформацію Вашого оператора"</string>
+    <string name="label_data_left">"Залишилося"</string>
+    <string name="label_data_used">"Використано"</string>
+    <string name="label_partner">"На основі Tencent Mobile Manager"</string>
 </resources>
