--- a/Ukrainian/main/LewaLauncherX.apk/res/values-uk/strings.xml
+++ b/Ukrainian/main/LewaLauncherX.apk/res/values-uk/strings.xml
@@ -1,105 +1,104 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="config_workspaceDefaultTransitionEffect">Standard</string>
-    <string name="application_name">LEWA лаунчер</string>
-    <string name="folder_name">Папка без имени</string>
-    <string name="chooser_wallpaper">Выбрать обои от</string>
-    <string name="wallpaper_instructions">Установить обои</string>
-    <string name="pick_wallpaper">Обои</string>
-    <string name="activity_not_found">Приложение не установлено</string>
-    <string name="long_press_widget_to_add">Нажмите и перетащите его на рабочий стол</string>
-    <string name="group_applications">Приложения</string>
-    <string name="out_of_space">Больше нет места на этом экране</string>
-    <string name="shortcut_installed">Ярлык \"%s\" создан</string>
-    <string name="shortcut_uninstalled">Ярлык \"%s\" был удален</string>
-    <string name="shortcut_duplicate">Ярлык \"%s\" уже существует</string>
-    <string name="title_select_application">Выбрать приложение</string>
-    <string name="delete_target_label">Удалить</string>
-    <string name="uninstall_target_label">Деинсталлировать</string>
-    <string name="menu_manage_apps">Управление приложениями</string>
-    <string name="menu_wallpaper">Обои</string>
-    <string name="menu_settings">Параметры системы</string>
-    <string name="permlab_install_shortcut">установить ярлыки</string>
-    <string name="permdesc_install_shortcut">Позволяет приложению добавлять ярлыки без вмешательства пользователя</string>
-    <string name="permlab_uninstall_shortcut">удалить ярлыки</string>
-    <string name="permdesc_uninstall_shortcut">Позволяет приложению удалять ярлыки без вмешательства пользователя</string>
-    <string name="permlab_read_settings">чтение параметров рабочего стола и ярлыков</string>
-    <string name="permdesc_read_settings">Позволить приложению смотреть настройки и ярлыки рабочего стола</string>
-    <string name="permlab_write_settings">изменение параметров рабочего стола и ярлыков</string>
-    <string name="permdesc_write_settings">Позволяет приложению изменять настройки и ярлыки рабочего стола</string>
-    <string name="gadget_error_text">Проблема загрузки виджета</string>
-    <string name="default_scroll_format">Страница %1$d of %2$d</string>
-    <string name="workspace_scroll_format">Рабочая область %1$d of %2$d</string>
-    <string name="apps_customize_apps_scroll_format">Страница приложений %1$d of %2$d</string>
-    <string name="apps_customize_widgets_scroll_format">Страница виджетов %1$d of %2$d</string>
-    <string name="cannot_add_more_screen">Нельзя добавить больше экранов</string>
-    <string name="editmode_tip">Вы достигли минимального количества экранов и не может удалить больше</string>
-    <string name="menu_preview">Предпросмотр</string>
-    <string name="menu_edit">Виджеты</string>
-    <string name="menu_desktop_settings">Настройки лаунчера</string>
-    <string name="pref_desktop_effect">Эффект анимации рабочего стола</string>
-    <string name="pref_screen_layout">Сетка экрана</string>
-    <string name="pref_screen_layout_summary">Выберите экранное расположение настольных значков</string>
-    <string name="pref_desktop_effect_summary">Эфекты при перемещении рабочих столов</string>
-    <string name="pref_title_wallpaper_scrolling">Прокрутка обоев</string>
-    <string name="pref_summary_wallpaper_scrolling">Обои перемещаются вместе с рабочим столом</string>
-    <string name="pref_title_action_updown">Жесты рабочего стола</string>
-    <string name="pref_summary_action_updown">Взмахните вверх, чтобы открыть меню и вниз, чтобы открыть панель уведомлений</string>
-    <string name="pref_title_openapprecommend">Рекомендовано</string>
-    <string name="pref_summary_openapprecommend">Перечень рекомендованных приложений</string>
-    <string name="pref_title_resetlauncher">Сброс настроек</string>
-    <string name="pref_summary_resetlauncher">Востановить по умолчанию настройки лаунчера</string>
-    <string name="message_resetlauncher">Сбросить все иконки, виджеты и положение экрана</string>
-    <string name="pref_title_resethotseats">Сброс панели приложений</string>
-    <string name="pref_summary_resethotseats">Вернуть панель приложений снизу экрана в исходное состояние</string>
-    <string name="message_resethotseats">Сбросить панель приложений?</string>
-    <string name="pref_label_settings">Настройки рабочего стола</string>
-    <string name="folder_full_hint">Эта папка заполнена</string>
-    <string name="shortcut_phone">Телефон</string>
-    <string name="shortcut_contacts">Контакты</string>
-    <string name="shortcut_drawer">Список приложений</string>
-    <string name="shortcut_browser">Браузер</string>
-    <string name="shortcut_messaging">Сообщения</string>
-    <string name="uninstall_system_app_text">Системное приложение не может быть удалено</string>
-    <string name="uninstall_widget_text">Виджет не может быть установлен</string>
-    <string name="cannot_delete_widget_text">Виджет не может быть удален</string>
-    <string name="cannot_delete_app_text">Приложение не может быть удалено</string>
-    <string name="restore_drawer_hint">Иконка может быть восстановлена из настроек лаунчера</string>
-    <string name="system_tool_folder">Утилиты</string>
-    <string name="recent_installed_apps">Последние</string>
-    <string name="no_installed_apps">Нет установленных приложений</string>
-    <string name="new_rom_hint">Новый</string>
-    <string name="onekey_lockscreen">Экран блокировки</string>
-    <string name="other_widgets">Другие виджеты</string>
-    <string name="admin_description">Разрешить виджету с правами Суперпользователя включать экран блокировки при первом запуске</string>
-    <string name="system_groupname_widget">Виджеты</string>
-    <string name="system_groupname_all">Все</string>
-    <string name="system_groupname_all_application">Все приложения</string>
-    <string name="system_groupname_system">Системные</string>
-    <string name="system_groupname_security">Безопасность</string>
-    <string name="system_groupname_game">Игры</string>
-    <string name="system_groupname_play">Развлечения</string>
-    <string name="system_groupname_tool">Утилиты</string>
-    <string name="system_groupname_other">Другие</string>
-    <string name="menu_scene">Экран</string>
-    <string name="apprecommend_net_not">Проверьте сетевое соединение и повторите позже</string>
-    <string name="apprecommend_sd_not">Нет SD-карты, ошибка скачивания</string>
-    <string name="apprecommend_net_error">Ошибка сети, повторите позже</string>
-    <string name="apprecommend_recommendation">Рекомендуемые</string>
-    <string name="apprecommend_native">Приложения</string>
-    <string name="apprecommend_download">Скачать</string>
-    <string name="apprecommend_downloading">Скачивание</string>
-    <string name="apprecommend_pause">Пауза</string>
-    <string name="apprecommend_continue">Продолжить</string>
-    <string name="apprecommend_cancle">Отмена</string>
-    <string name="apprecommend_source">Источник:</string>
-    <string name="apprecommend_notlike">Не нравится</string>
-    <string name="apprecommend_pop_downloadconut">другие устанавливают</string>
-    <string name="apprecommend_show_text">Все необходимое установлено</string>
-    <string name="apprecommend_download_max">Загрузка до 3</string>
-    <string name="apprecommend__install_success">Установлено</string>
-    <string name="apprecommend__unlike_all">Нет рекомендованных приложений</string>
-    <string name="pull_to_refresh_pull_label">Потяните, чтобы обновить</string>
-    <string name="pull_to_refresh_release_label">Отпустите, чтобы обновить</string>
-    <string name="pull_to_refresh_refreshing_label">Загрузка ..</string>
+    <string name="config_workspaceDefaultTransitionEffect">"Стандарт"</string>
+    <string name="application_name">"LEWA лаунчер"</string>
+    <string name="folder_name">"Папка без імені"</string>
+    <string name="chooser_wallpaper">"Вибрати шпалери від"</string>
+    <string name="wallpaper_instructions">"Встановити шпалери"</string>
+    <string name="pick_wallpaper">"Шпалери"</string>
+    <string name="activity_not_found">"Додаток не встановлено"</string>
+    <string name="long_press_widget_to_add">"Натисніть та перетягніть його на робочий стіл"</string>
+    <string name="group_applications">"Додатки"</string>
+    <string name="out_of_space">"Більше немає місця на цьому екрані"</string>
+    <string name="shortcut_installed">"Ярлик \"%s\"створений"</string>
+    <string name="shortcut_uninstalled">"Ярлик \"%s\" був вилучений"</string>
+    <string name="shortcut_duplicate">"Ярлик \"%s\" вже існує"</string>
+    <string name="title_select_application">"Вибрати додаток"</string>
+    <string name="delete_target_label">"Видалити"</string>
+    <string name="uninstall_target_label">"Деінсталювати"</string>
+    <string name="menu_manage_apps">"Управління додатками"</string>
+    <string name="menu_wallpaper">"Шпалери"</string>
+    <string name="menu_settings">"Параметри системи"</string>
+    <string name="permlab_install_shortcut">"встановити ярлики"</string>
+    <string name="permdesc_install_shortcut">"Дозволяє додатком додавати ярлики без втручання користувача"</string>
+    <string name="permlab_uninstall_shortcut">"видалити ярлики"</string>
+    <string name="permdesc_uninstall_shortcut">"Дозволяє додатком видаляти ярлики без втручання користувача"</string>
+    <string name="permlab_read_settings">"читання параметрів робочого столу і ярликів"</string>
+    <string name="permdesc_read_settings">"Дозволити додатком дивитися налаштування і ярлики робочого столу"</string>
+    <string name="permlab_write_settings">"зміна параметрів робочого столу і ярликів"</string>
+    <string name="permdesc_write_settings">"Дозволяє додатком змінювати налаштування і ярлики робочого столу"</string>
+    <string name="gadget_error_text">"Проблема завантаження віджету"</string>
+    <string name="default_scroll_format">"Сторінка %1$d з %2$d"</string>
+    <string name="workspace_scroll_format">"Робоча область %1$d з %2$d"</string>
+    <string name="apps_customize_apps_scroll_format">"Сторінка додатків %1$d з %2$d"</string>
+    <string name="apps_customize_widgets_scroll_format">"Сторінка віджетів %1$d з %2$d"</string>
+    <string name="cannot_add_more_screen">"Не можна додати більше екранів"</string>
+    <string name="editmode_tip">"Ви досягли мінімальної кількості екранів і не може видалити більше"</string>
+    <string name="menu_preview">"Попередній перегляд"</string>
+    <string name="menu_edit">"Віджети"</string>
+    <string name="menu_desktop_settings">"Налаштування лаунчера"</string>
+    <string name="pref_desktop_effect">"Ефект анімації робочого столу"</string>
+    <string name="pref_screen_layout">"Сітка екрану"</string>
+    <string name="pref_screen_layout_summary">"Виберіть екранне розташування настільних значків"</string>
+    <string name="pref_desktop_effect_summary">"Ефекти при переміщенні робочих столів"</string>
+    <string name="pref_title_wallpaper_scrolling">"Прокрутка шпалер"</string>
+    <string name="pref_summary_wallpaper_scrolling">"Шпалери переміщуються разом з робочим столом"</string>
+    <string name="pref_title_action_updown">"Жести робочого столу"</string>
+    <string name="pref_summary_action_updown">"Змахніть вгору, щоб відкрити меню і вниз, щоб відкрити панель повідомлень"</string>
+    <string name="pref_title_openapprecommend">"Рекомендовано"</string>
+    <string name="pref_summary_openapprecommend">"Перелік рекомендованих додатків"</string>
+    <string name="pref_title_resetlauncher">"Скидання налаштувань"</string>
+    <string name="pref_summary_resetlauncher">"Встановити за замовчуванням налаштування лаунчера"</string>
+    <string name="message_resetlauncher">"Скинути все іконки, віджети і положення екрану"</string>
+    <string name="pref_title_resethotseats">"Скидання панелі додатків"</string>
+    <string name="pref_summary_resethotseats">"Повернути панель додатків знизу екрану в початковий стан"</string>
+    <string name="message_resethotseats">"Скинути панель додатків?"</string>
+    <string name="pref_label_settings">"Налаштування робочого столу"</string>
+    <string name="folder_full_hint">"Ця папка заповнена"</string>
+    <string name="shortcut_phone">"Телефон"</string>
+    <string name="shortcut_contacts">"Контакти"</string>
+    <string name="shortcut_drawer">"Список додатків"</string>
+    <string name="shortcut_browser">"Браузер"</string>
+    <string name="shortcut_messaging">"Повідомлення"</string>
+    <string name="uninstall_system_app_text">"Системне додаток не може бути видалено"</string>
+    <string name="uninstall_widget_text">"Віджет не може бути встановлений"</string>
+    <string name="cannot_delete_widget_text">"Віджет не може бути видалений"</string>
+    <string name="cannot_delete_app_text">"Додаток не може бути видалений"</string>
+    <string name="restore_drawer_hint">"Іконка може бути відновлена ​​з налаштувань лаунчера"</string>
+    <string name="system_tool_folder">"Утиліти"</string>
+    <string name="recent_installed_apps">"Останні"</string>
+    <string name="no_installed_apps">"Немає встановлених додатків"</string>
+    <string name="new_rom_hint">"Новий"</string>
+    <string name="onekey_lockscreen">"Екран блокування"</string>
+    <string name="other_widgets">"Інші віджети"</string>
+    <string name="admin_description">"Дозволити віджету з правами Суперкористувача включати екран блокування при першому запуску"</string>
+    <string name="system_groupname_widget">"Віджети"</string>
+    <string name="system_groupname_all">"Всі"</string>
+    <string name="system_groupname_all_application">"Всі додатки"</string>
+    <string name="system_groupname_system">"Системні"</string>
+    <string name="system_groupname_security">"Безпека"</string>
+    <string name="system_groupname_game">"Ігри"</string>
+    <string name="system_groupname_play">"Розваги"</string>
+    <string name="system_groupname_tool">"Утиліти"</string>
+    <string name="system_groupname_other">"Інші"</string>
+    <string name="menu_scene">"Екран"</string>
+    <string name="apprecommend_net_not">"Перевірте мережеве з'єднання і повторіть пізніше"</string>
+    <string name="apprecommend_sd_not">"Немає SD-карти, помилка завантаження"</string>
+    <string name="apprecommend_net_error">"Помилка мережі, повторіть пізніше"</string>
+    <string name="apprecommend_recommendation">"Рекомендовані"</string>
+    <string name="apprecommend_native">"Додатки"</string>
+    <string name="apprecommend_download">"Завантажити"</string>
+    <string name="apprecommend_downloading">"Завантаження"</string>
+    <string name="apprecommend_pause">"Пауза"</string>
+    <string name="apprecommend_continue">"Продовжити"</string>
+    <string name="apprecommend_cancle">"Скасувати"</string>
+    <string name="apprecommend_source">"Джерело:"</string>
+    <string name="apprecommend_notlike">"Не подобається"</string>
+    <string name="apprecommend_pop_downloadconut">"інші встановлюють"</string>
+    <string name="apprecommend_show_text">"Все необхідне встановлено"</string>
+    <string name="apprecommend_download_max">"Завантаження до 3"</string>
+    <string name="apprecommend__install_success">"Встановлено"</string>
+    <string name="apprecommend__unlike_all">"Ні рекомендованих додатків"</string>
+    <string name="pull_to_refresh_pull_label">"Потягніть, щоб оновити"</string>
+    <string name="pull_to_refresh_release_label">"Відпустіть, щоб оновити"</string>
+    <string name="pull_to_refresh_refreshing_label">"Завантаження..."</string>
 </resources>
